--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <img src="./images/sheep.jpg" class="twoImages" id="child" alt="">
             </div>
             <div class="bigBox">
-                <h2>visual communication</h2>
+                <h2>visual communication (<a href="./visGallery.html" class="pageLink">gallery</a> )</h2>
                 <p>
                     during my time at wwu, my favorite classes have always been my design classes. i love
                     coding, and software development feeds my analitical side in a very real way, but 
