updated content and added alt text

--- a/classfinder.html
+++ b/classfinder.html
@@ -60,7 +60,7 @@
 
             </p>
 
-            <img src="./designWork/classfinder/original.png" class="leftImg" alt="">
+            <img src="./designWork/classfinder/original.png" class="leftImg" alt="two tables of information on courses at wwu">
             <p class="caption">old solution</p>
             <br><br>
 
@@ -72,8 +72,8 @@
 
             </p>
 
-            <img src="./designWork/classfinder/whitebrd1.png" alt="" class="leftImg">
-            <img src="./designWork/classfinder/whitebrd3.jpg" alt="" class="leftImg">
+            <img src="./designWork/classfinder/whitebrd1.png" alt="whiteboard with initial ideas about requirements and features" class="leftImg">
+            <img src="./designWork/classfinder/whitebrd3.jpg" alt="whiteboard with notes on personas and user flows" class="leftImg">
             <img src="./designWork/classfinder/whitebrd0.png" alt="" class="leftImg">
             <br><br> <br><br>
 
@@ -105,7 +105,7 @@
         
             <h1>the sketchbook</h1>
             <p>
-                working through the problems on paper. user stories, flows, information from the old solution,
+                most of my initial work was in this sketchbook, working through the problems on paper. it includes user stories, flows, information from the old solution,
                 wireframes, and many questions i needed 
                 to find answers to
             </p>
