--- a/moodfit.html
+++ b/moodfit.html
@@ -47,9 +47,14 @@
 
     <main>
         <div class="centerDiv">
+
+            <h1>case study</h1>
             <embed src="./designWork/moodfit/finalCaseStudy.pdf#toolbar=0" type="application/pdf" height="600px">
 
+                <br>
+                <br>
         
+            <h1>prototypes</h1>
             <div class="threeBox" id="threeBoxLabel">
                 
                 <div class="thirdBox">
