--- a/visGallery.html
+++ b/visGallery.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@800&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a href="#maincontent" id="skipNav" class="screenreaderText">skip to content</a>
     <header>
         <nav id="nav">
             <a href="./index.html"><div id='logo'></div></a>
@@ -34,12 +35,12 @@
                 <li><a href="./visGallery.html" class="underline">visual communication</a></li>
             </ul>
             
-            <button id="menu" onclick="drop()"></button>
+            <button id="menu" onclick="drop()" aria-label="open menu"></button>
             <script src="./javascript/mobile.js"></script>
         </nav>
 
     </header>
-    <main>
+    <main id="maincontent">
         
         <div class="gallery">
             <!-- first column -->
@@ -318,5 +319,14 @@
 
 
     </main>
+
+    <footer>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/abby-k-smith/" target="_blank" class="underline" aria-label="Abby's linkedin - opens a new tab">linkedin</a></li>
+            <li><a href="https://github.com/abbyvsmith" target="_blank" class="underline" aria-label="Abby's Github - opens a new tab">github</a></li>
+        </ul>
+    </footer>
+
 </body>
+
 </html>
